k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-project-app
  namespace: student-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-project-app
  template:
    metadata:
      labels:
        app: student-project-app
    spec:
      containers:
        - name: student-project-app
          image: nikolasarafimov/student-project-management-system:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
