k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-project-service
  namespace: student-project
spec:
  selector:
    app: student-project-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
