k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-project-ingress
  namespace: student-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: student-project.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-project-service
                port:
                  number: 8080
